plugins {
    id 'java'
    id 'org.springframework.boot' version '3.3.2'
    id 'io.spring.dependency-management' version '1.1.6'
}

group = 'com.triptyche'
version = '0.0.1-SNAPSHOT'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(17)
    }
}

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

repositories {
    mavenCentral()
}

dependencies {
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
    implementation 'org.springframework.security:spring-security-oauth2-jose'
    implementation 'org.springframework.boot:spring-boot-starter-security'
    implementation 'org.springframework.boot:spring-boot-starter-web'

    // Lombok 관련 의존성 추가
    compileOnly 'org.projectlombok:lombok'
    annotationProcessor 'org.projectlombok:lombok'

    // Spring Boot DevTools 관련 의존성 추가
    developmentOnly 'org.springframework.boot:spring-boot-devtools'

    // MySQL 관련 의존성 추가
    runtimeOnly 'com.mysql:mysql-connector-j'

    // JUnit5 관련 의존성 추가
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testImplementation 'org.springframework.security:spring-security-test'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
    testRuntimeOnly 'com.h2database:h2'

    // JWT 관련 의존성 추가
    implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
    runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.11.5'
    runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.11.5'

    // Swagger 관련 의존성 추가
    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.3.0'

    // 메타데이터 추출용 의존성
    implementation 'com.drewnoakes:metadata-extractor:2.18.0'

    // SWS S3 SDK 의존성
    implementation 'software.amazon.awssdk:s3:2.20.17'

    // Jackson Databind 의존성 추가
    implementation 'com.fasterxml.jackson.core:jackson-databind:2.15.0'
    implementation 'com.fasterxml.jackson.datatype:jackson-datatype-jdk8:2.15.0'

    // Optional, JDK8 관련 타입 지원
    implementation 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310:2.15.0'

    // Prometheus와 Actuator 모니터링을 위한 의존성
    implementation 'org.springframework.boot:spring-boot-starter-actuator'
    implementation 'io.micrometer:micrometer-registry-prometheus'
    implementation 'io.prometheus:prometheus-metrics-core:1.1.0'


    // Redis 설정
    implementation 'org.springframework.boot:spring-boot-starter-data-redis'
    implementation 'org.apache.commons:commons-pool2'

    // hibernate
    implementation 'org.hibernate.common:hibernate-commons-annotations:6.0.6.Final'

    // Websocket 관련
    implementation 'org.springframework.boot:spring-boot-starter-websocket'
    implementation 'org.springframework:spring-messaging'

    // Flyway 마이그레이션
    implementation 'org.flywaydb:flyway-core'
    implementation 'org.flywaydb:flyway-mysql'

}

tasks.named('test') {
    useJUnitPlatform()
    reports.junitXml.mergeReruns = false
}
